samples/_failures_safe/1761494397_3aea8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03e6ad4b.c: In function ‘main’:
./samples/SAFE/__tmp_03e6ad4b.c:165:5: error: expected declaration or statement at end of input
  165 |     token_list_destroy(tokens);
      |     ^~~~~~~~~~~~~~~~~~
